--- a/styles2.css
+++ b/styles2.css
@@ -15,19 +15,13 @@
     /* Estilos para pantalla horizontal aquí */
     margin: 0;
     font-size: 30px;
+    display: flex;
     
   }
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
 
 html body {
-  display: flex;
   justify-content: center;
   background-image: url("img1/paisaje3.jpg");
   background-size: cover;
@@ -37,10 +31,6 @@ html body {
 
 .playbutton {
   background: transparent;
-  background-repeat: no-repeat;
-  background-size: 80px 80px;
-  width: 80px;
-  height: 80px;
   border: none; /* Elimina el borde */
   cursor: pointer; /* Cambia el cursor para indicar que es interactivo */
   outline: none; /* Elimina el contorno cuando el botón está enfocado */
@@ -61,6 +51,19 @@ html body {
   align-items: center;
 }
 
+.button-piano {
+  background: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  margin-right: auto; /* Mueve el botón a la derecha */
+  border: none; /* Elimina el borde */
+  cursor: pointer; /* Cambia el cursor para indicar que es interactivo */
+  outline: none; /* Elimina el contorno cuando el botón está enfocado */
+  /* Agrega otros estilos según tus preferencias */
+}
+
 .tempo-button {
   background: transparent;
   background-repeat: no-repeat;
@@ -72,18 +75,17 @@ html body {
   cursor: pointer; /* Cambia el cursor para indicar que es interactivo */
   outline: none; /* Elimina el contorno cuando el botón está enfocado */
   /* Agrega otros estilos según tus preferencias */
-}
-.button-row {
+}.button-row {
   display: flex;
-  justify-content: center; /* Centrar horizontalmente los elementos */
-  align-items: center; /* Centrar verticalmente los elementos si es necesario */
+  justify-content: center;  /* Centra los elementos horizontalmente */
+  align-items: center;      /* Centra los elementos verticalmente */
 }
 .tempo{
   /* Estilo común para los botones */
-  width: 50px; /* Ajusta el ancho según tus necesidades */
-  height: 50px; /* Ajusta la altura según tus necesidades */
-  font-size: 16px; /* Ajusta el tamaño de fuente para dispositivos móviles */
-  margin-left: 5px; /* Reduce el espacio a la izquierda del texto */
+  width: 100px; /* Ajusta el ancho según tus necesidades */
+  height: 5%; /* Ajusta la altura según tus necesidades */
+  font-size: 20px; /* Ajusta el tamaño de fuente para dispositivos móviles */
+   /* Reduce el espacio a la izquierda del texto */
   white-space: nowrap; /* Evita que el texto se divida en varias líneas */
   font-weight: bold; /* Hace que el texto esté en negrita */
   /* Agrega otros estilos según tus preferencias */
@@ -91,9 +93,11 @@ html body {
 .play-button {
   background: transparent;
   background-repeat: no-repeat;
-  width: 90px; /* Ajusta el ancho según tus necesidades */
-  height: 90px; /* Ajusta la altura según tus necesidades */
-  background-size: 80px 80px; /* Ajusta el tamaño de la imagen de fondo */
+  width: 75px; /* Ajusta el ancho según tus necesidades */
+  height: 75px; /* Ajusta la altura según tus necesidades */
+  margin-left: 30px; /* Reduce el espacio a la izquierda del botón */
+  margin-bottom: auto; /* Reduce el espacio a la izquierda del botón */
+  background-size: 70px 70px; /* Ajusta el tamaño de la imagen de fondo */
   border: none; /* Elimina el borde */
   cursor: pointer; /* Cambia el cursor para indicar que es interactivo */
   outline: none; /* Elimina el contorno cuando el botón está enfocado */
@@ -111,13 +115,28 @@ html body {
 }
 
 .btn-r {
+  width: 120px; /* Ajusta el ancho según tus necesidades */
+  height: 80px; /* Ajusta la altura según tus necesidades */
+  background-size: cover; /* Ajusta según tus necesidades */
   background-image: url("img1/pica2.gif");
 }
 .btn-l {
+  width: 80px; /* Ajusta el ancho según tus necesidades */
+  height: 80px; /* Ajusta la altura según tus necesidades */
+  background-size: cover; /* Ajusta según tus necesidades */
   background-image: url("img1/gigi.gif");
 }
 .btn-sleep {
+  width: 70px; /* Ajusta el ancho según tus necesidades */
+  height: 70px; /* Ajusta la altura según tus necesidades */
+  background-size: cover; /* Ajusta según tus necesidades */
   background-image: url("img1/sleep.gif");
+}
+.btn-p {
+  width: 50px; /* Ajusta el ancho según tus necesidades */
+  height: 50px; /* Ajusta la altura según tus necesidades */
+  background-size: cover; /* Ajusta según tus necesidades */
+  background-image: url("img1/piano.png");
 }
   /* botón rojo */
 .btn-1 {
@@ -215,29 +234,4 @@ html body {
 
 .btn-24 {
   background-image: url("img1/flor24.gif");
-} 
-
-.btn-25 {
-  background-image: url("img1/flor25.gif");
-} 
-
-.btn-26 {
-  background-image: url("img1/flor26.gif");
-} 
-
-.btn-27 {
-  background-image: url("img1/flor27.gif");
-} 
-
-.btn-28 {
-  background-image: url("img1/flor28.gif");
-} 
-
-/* Agrega más clases de colores según tus necesidades */
-/*.play-button.active {
-  transform: scale(1.1); /* Ejemplo de escala cuando se activa el botón */
-  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Ejemplo de sombra cuando se activa el botón */
-  /*width: 120px;
-  height: 120px;
-  margin-bottom: 10px;
-}*/ 
+}
